# notion-caldav-sync

./: .env-example  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.live.config.ts  wrangler.toml-example
docs/: typescript-rewrite.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: bootstrap_notion.py  deploy_helpers.py  predeploy-check.mjs
src/: index.ts  shims.d.ts
src/app/: __init__.py  calendar.py  config.py  constants.py  engine.py  fetch_adapter.py  ics.py  logger.py  notion.py  stores.py  task.py  webhook.py  worker.py
src/auth/: clerk.ts  csrf.ts  factory.ts  navigation.ts  pages.ts
src/calendar/: caldav.ts  discovery.ts  ics.ts  webdav.ts
src/db/: app-schema.ts  tenant-repo.ts
src/durable/: d1-storage.ts  tenant-sync.ts
src/lib/: retry.ts  secrets.ts
src/notion/: client.ts  webhook.ts
src/sync/: constants.ts  ledger.ts  live.ts  models.ts  rendering.ts  runtime.ts  service.ts
test/: auth-navigation.test.ts  caldav.test.ts  csrf.test.ts  ics-extended.test.ts  ics.test.ts  live-facade.test.ts  live.integration.test.ts  property-mapping.test.ts  rendering.test.ts  retry.test.ts  sync-profile.test.ts  sync-service.test.ts  tenant-repo.test.ts  webdav.test.ts  webhook-extended.test.ts  webhook-route.test.ts  webhook.test.ts
test/helpers/: env.ts
tests/: test_calendar_delta.py  test_calendar_settings.py  test_engine_utils.py  test_ics_unit.py  test_webhook.py
(+8 files in other folders)
